// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with empty props 1`] = `
<div
  className="clickable disableTextSelection"
  data-testid="clickable"
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="button"
  tabIndex={0}
/>
`;

exports[`renders correctly with props 1`] = `
<div
  className="clickable monday-style_tests-class"
  data-testid="clickable"
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="banner"
  tabIndex={0}
>
  Children text
</div>
`;
